--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     class="list-group-item d-flex justify-content-between align-items-center bg-transparent border border-1 border-success text-white p-3"
                 >
                     <span
+                        @click="toggleClick(index)"
                         :class="{ 'text-decoration-line-through': currentTask.done === true }"
                     >
                         {{ currentTask.text }}
@@ -74,11 +75,6 @@
             </div>
             
         </div>
-
-        <div class="container d-flex justify-content-center">
-          
-        </div>
-
 
     </div>
 
