--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             To-do List 
         </h1>
 
-        <div class="row-cols-1">
+        <div id="container-todo">
             
             <!-- Lista dei To do -->
-            <ul class="custom-width mb-4 m-auto"
+            <ul id="todos" class="custom-width mb-4 m-auto"
                     v-if="toDos.length > 0"
                 >
                     <li v-for="(currentTask, index) in toDos"
@@ -52,7 +52,7 @@
             </ul>
 
             <!-- Paragrafo in caso non ci siano todo -->
-            <p v-else class="custom-width text-warning m-auto mb-4">
+            <p v-else class="custom-width text-warning m-auto text-center mb-4">
                     Hai fatto tutte le cose che dovevi fare!
             </p>
 
@@ -66,10 +66,10 @@
                         placeholder="Testo del TODO" 
                         aria-label="Testo del TODO" 
                         aria-describedby="add-todo"
-                        @keydown.enter="addTodo()"
+                        @keyup.enter="addTodo()"
                     >
                     <button 
-                        class="btn btn-outline-success text-bg-dark" 
+                        class="btn btn-outline-success pe-auto text-bg-dark" 
                         type="button" 
                         id="add-task"
                         @click="addTodo()"
@@ -77,6 +77,7 @@
                         INSERT
                     </button>
             </div>
+
         </div> 
         
 
